[fix]: fixes header alignment

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -6,3 +6,8 @@
 .border-default-200 {
   border-color:#0079C0;
 }
+
+.w-max-ppn {
+  max-width: 1600px;
+  margin: auto;
+}
